# devjobs-api

./: .gitignore  Dockerfile  README.md  build.sh  companies.json  deploy.sh  entrypoint.sh  pyproject.toml  render.yaml
app/: logger.py  models.py  urls.py
app/fixtures/: blurbs.json  companies.json  fixture_util.py  jobs.json  map_blurbs.py  map_companies.py  map_jobs.py  raw.json
app/fixtures/job_descriptions/: convert.py  job_1.md
app/management/commands/: mapfixtures.py
app/migrations/: 0001_initial.py  0002_rename_location_job_country_job_city.py
app/serializers/: blurb_serializer.py  company_serializer.py  job_serializer.py
app/tests/api/: test_companies.py  test_jobs.py
app/tests/integration/: distance_test.py
app/util/: fake_points.py  geocoder.py  geography.py  model_factory.py
app/views/: company_view.py  job_view.py
devjobs/: asgi.py  settings.py  urls.py  wsgi.py
